# msdatabase

./: LICENSE  pyproject.toml
msdatabase/: google_drive_handler.py  logging_config.py  main.py
